--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 /* Contenedor principal para login y dashboard */
 #auth-container, .container {
-  background-color: #27c9df;
+  background-color: #e3edee;
   border-radius: 14px;
   width: 100%;
   max-width: 400px;  /* Para login menos ancho */
